# diff_drive_sim_robot

./: README.md
ddsr_control/: CMakeLists.txt  package.xml
ddsr_control/config/: control.yaml
ddsr_control/launch/: control.launch  teleop.launch
ddsr_control/rviz/: control.rviz
ddsr_description/: CMakeLists.txt  package.xml
ddsr_description/launch/: description.launch
ddsr_description/rviz/: ddsr_description.rviz
ddsr_description/scripts/: urdf_creation.sh
ddsr_description/urdf/: ddsr.xacro
ddsr_gazebo/: CMakeLists.txt  package.xml
ddsr_gazebo/gazebo/: ddsr.gazebo
ddsr_gazebo/launch/: gazebo.launch
ddsr_gazebo/rqt/: sliders.perspective
ddsr_gazebo/rviz/: gazebo.rviz
ddsr_gazebo/scripts/: set_physical_parameters.sh
ddsr_gazebo/worlds/: ground_plane.world
